# plotter-agent

./: README.md  pyproject.toml
config/: config.yaml
src/: app.py
src/experiment/: exp.ipynb
src/models/: __init__.py  file_processor.py  llm_support.py  plotting_agent.py  utils.py
test_files/: test_file_sin.csv  test_file_sin.xls  test_file_sin.xlsx  tmp.txt
