[project]
name = "plotter-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlwt (>=1.3.0,<2.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "langgraph (>=0.4.3,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
